# bitsery_uring

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindIoUring.cmake
examples/: CMakeLists.txt  demo.cpp
include/bitsery_uring/: uring_adapter.h
tests/: CMakeLists.txt  demo_test.cpp
